[package]
edition = "2021"
name = "turbopilot"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "turbocharger_generated"
path = "src/wasm.rs"

[[bin]]
name = "turbopilot"
path = "src/server.rs"

[dependencies]
turbocharger = {git = "https://github.com/trevyn/turbocharger", branch = "main", features = ["axum"], default-features = false}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# dependencies for server only
eframe = {git = "https://github.com/emilk/egui", branch = "master"}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
