[package]
edition = "2021"
name = "turbopilot"
publish = false
version = "0.1.0"

[dependencies]
axum = {git = "https://github.com/tokio-rs/axum", branch = "main", features = ["ws", "headers"]}
eframe = {git = "https://github.com/emilk/egui", branch = "master"}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracked = "0.5"
